[package]
name = "cloudcafe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brisk = { workspace = true}
openxr = { version = "0.17.1", features = ["linked"] }
[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = {version = "0.7.0", features = ["logger", "android_logger"]}
ndk = "0.7.0"

[package.metadata.android]
apk_label = "CloudCafe"
fullscreen = true
#runtime_libs = "./common_lib"
target_sdk_version = 29
assets = "./assets"

[package.metadata.android.application]
debuggable = true
label = "CloudCafe"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

#[[package.metadata.android.application.meta_data]]
#name = "com.oculus.handtracking.version"
#value = "V2.1"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"


#[package.metadata.android.application.activity]
#config_changes = "screenSize|screenLayout|orientation|keyboardHidden|keyboard|navigation|uiMode"
#launch_mode = "singleTask"
#orientation = "landscape"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.access_network_state"

[[package.metadata.android_uses_permission]]
name = "com.oculus.permission.HAND_TRACKING"

[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true
version = 1

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[package.metadata.android.signing.release]
path = "./hotham_examples.keystore"
keystore_password = "chomsky-vigilant-spa"