[package]
name = "stereokit-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["model-draw-system", "networking"]
model-draw-system = []
networking = ["dep:leknet", "model-draw-system", "serde", "bevy_reflect", "bevy_quinnet", "bevy_transform/serialize", "bincode", "bimap"]

[dependencies]
stereokit = { workspace = true, features = ["bevy_ecs"]}
glam = { version = "0.23.0", features = ["mint"] }
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
bevy_transform = "0.10.1"
bevy_time = "0.10.1"
leknet = { path = "../leknet", optional = true}
serde = { version = "1.0.164", optional = true}
bevy_reflect = { version = "0.10.1", optional = true}
bevy_quinnet = { version = "0.4.0", optional = true}
bincode = { version = "1.3.3", optional = true}
bimap = { version = "0.6.3", optional = true }
bevy_hierarchy = "0.10.1"
bevy_core = "0.10.1"
bevy = {version = "0.10.1", features = []}