[package]
name = "stereokit-interaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leknet = { workspace = true }
stereokit-bevy = { workspace = true, features = ["networking"]}
stereokit = { workspace = true , features = ["bevy_ecs", "bevy_reflect"]}
bevy_app = "0.10.1"
bevy_ecs = "0.10.1"
bevy_transform = "0.10.1"
bevy_quinnet = "0.4.0"
bevy_hierarchy = "0.10.1"
glam = { workspace = true, features = ["mint"] }
bimap = "0.6.3"
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"]}